minimal login/register

--- a/SE_Project/Views/Home/Privacy.cshtml
+++ b/SE_Project/Views/Home/Privacy.cshtml
@@ -3,4 +3,12 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<p>Use this page to detail your site's privacy policy.
+
+    Admin- has access to all pages (create user included for now)
+    Creator - has access to all User's pages + a special page(maybe this will need a different controller) to upload music (while testing this will be an empty page)
+    User - has access to a page made for searching and listening to music directly(testing)
+
+</p>
+
