--- a/SE_Project/Views/Users/Create.cshtml
+++ b/SE_Project/Views/Users/Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@model SE_Project.Models.User
+@using SE_Project.Models
+@using Microsoft.AspNetCore.Mvc.Rendering
 
 @{
     ViewData["Title"] = "Create";
@@ -9,16 +11,37 @@
 <form asp-action="Create" method="post">
 
     <div class="form-group">
-        <label for="Name">Name  </label>
-        <input type="text" class="form-control" asp-for="Name" />
+        <label for="FirstName">FirstName  </label>
+        <input type="text" class="form-control" asp-for="FirstName" />
+    </div>
+
+    <div class="form-group">
+        <label for="LastName">LastName  </label>
+        <input type="text" class="form-control" asp-for="LastName" />
+    </div>
+
+    <div class="form-group">
+        <label for="Password">Password  </label>
+        <input type="text" class="form-contre rol" asp-for="Password" />
     </div>
 
     <div class="form-group">
         <label for="Email">Email  </label>
-        <input type="text" class="form-control" asp-for="Email" />
+        <input type="email" class="form-control" asp-for="Email" />
     </div>
 
+    <div class="form-group">
+        <label for="BirthDate">BirthDate  </label>
+        <input type="date" class="form-control" asp-for="BirthDate" />
+    </div>
 
+    <div class="form-group">
+        <label asp-for="Role"></label>
+        <select asp-for="Role" class="form-control" asp-items="@(new SelectList(ViewBag.Roles, "Value", "Text"))"></select>
+        <span asp-validation-for="Role" class="text-danger"></span>
+    </div>
+
+    
 
     <button type="submit" class="btn btn-primary">Submit</button>
 
