--- a/SE_Project/Views/Users/Delete.cshtml
+++ b/SE_Project/Views/Users/Delete.cshtml
@@ -5,7 +5,8 @@
 
 <h3>Are you sure you want to delete this user?</h3>
 
-<p>@Model.Name</p>
+<p>@Model.FirstName</p>
+<p>@Model.LastName</p>
 <p>@Model.Email</p>
 
 <form asp-action="Delete" method="post">
