--- a/SE_Project/Views/Users/Edit.cshtml
+++ b/SE_Project/Views/Users/Edit.cshtml
@@ -9,13 +9,30 @@
 <form asp-action="Edit" method="post">
 
     <div class="form-group">
-        <label for="Name">Name  </label>
-        <input type="text" class="form-control" asp-for="Name" />
+        <label for="FirstName">FirstName  </label>
+        <input type="text" class="form-control" asp-for="FirstName" />
     </div>
+
+    <div class="form-group">
+        <label for="LastName">LastName  </label>
+        <input type="text" class="form-control" asp-for="LastName" />
+    </div>
+
     <div class="form-group">
         <label for="Email">Email  </label>
         <input type="text" class="form-control" asp-for="Email" />
     </div>
+
+    <div class="form-group">
+        <label for="Role">Role  </label>
+        <select name="mySelect" asp-for="Role">
+            <option value="0">User</option>
+            <option value="1">Creator</option>
+            <option value="2">Admin</option>
+        </select>
+        @* <input type="d" class="form-control" asp-for="Role" /> *@
+    </div>
+
     <button type="submit" class="btn btn-primary">Change</button>
 
 </form>
