--- a/SE_Project/Views/Users/Index.cshtml
+++ b/SE_Project/Views/Users/Index.cshtml
@@ -1,41 +1,49 @@
-﻿@model List<SE_Project.Models.User>
-@{
-    ViewData["Title"] = "Index";
-
+﻿@{
+    ViewData["Title"] = "Profilul Meu";
+    Layout = "_LayoutHome";
 }
-<h3>Index</h3>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>FirstName</th>
-            <th>LastName</th>
-            <th>Email</th>
-            <th>DoB</th>
-            <th>Role</th>
+<div class="container text-white mt-4">
+    <h2 class="mb-4">👤 Bun venit, @User.Identity.Name</h2>
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
-            <tr>
-                <td>@user.Id</td>
-                <td>@user.FirstName</td>
-                <td>@user.LastName</td>
-                <td>@user.Email</td>
-                <td>@user.BirthDate</td>
-                <td>@user.Role</td>
+    <div class="row g-4">
+        <div class="col-md-4">
+            <div class="card bg-dark border-success h-100">
+                <div class="card-body text-center">
+                    <i class="fa fa-star fa-3x mb-3 text-danger"></i>
+                    <h5 class="card-title">Melodii Favorite</h5>
+                    <a href="/Favorite/MyFavorites" class="btn btn-outline-danger mt-2">Vezi Melodii</a>
+                </div>
+            </div>
+        </div>
 
-                <td>
-                    <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@user.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
+        <div class="col-md-4">
+            <div class="card bg-dark border-primary h-100">
+                <div class="card-body text-center">
+                    <i class="fa fa-music fa-3x mb-3 text-primary"></i>
+                    <h5 class="card-title">Playlist-uri Favorite</h5>
+                    <a href="/Library/FavoritePlaylists" class="btn btn-outline-primary mt-2">Vezi Playlist-uri</a>
+                </div>
+            </div>
+        </div>
 
-</table>
+        <div class="col-md-4">
+            <div class="card bg-dark border-warning h-100">
+                <div class="card-body text-center">
+                    <i class="fa fa-sign-out-alt fa-3x mb-3 text-warning"></i>
+                    <h5 class="card-title">Delogare</h5>
+                    <form method="post" asp-controller="Users" asp-action="Logout">
+                        <button type="submit" class="btn btn-outline-warning mt-2">Logout</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <hr class="my-5" />
 
+    <div class="text-center text-muted">
+        <p class="mb-1">Email: @User.Identity.Name</p>
+        <small>Cont creat prin sistemul de autentificare al aplicației</small>
+    </div>
+</div>
