--- a/SE_Project/wwwroot/css/site.css
+++ b/SE_Project/wwwroot/css/site.css
@@ -86,3 +86,40 @@ body {
         background-color: #2dc25e;
         color: #fff;
     }
+
+.song-card {
+    width: 180px;
+    margin: 10px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+}
+
+    .song-card:hover {
+        transform: scale(1.03);
+    }
+
+.song-image {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.song-title {
+    font-weight: bold;
+    margin-top: 5px;
+    color: white;
+}
+
+.song-artist {
+    font-size: 0.9em;
+    color: #bbb;
+}
+
+.songs-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+.trending-scroll::-webkit-scrollbar {
+    display: none;
+}
