--- a/SE_Project/Views/Users/Index.cshtml
+++ b/SE_Project/Views/Users/Index.cshtml
@@ -22,7 +22,7 @@
                 <div class="card-body text-center">
                     <i class="fa fa-music fa-3x mb-3 text-primary"></i>
                     <h5 class="card-title">Playlist-uri Favorite</h5>
-                    <a href="/Library/FavoritePlaylists" class="btn btn-outline-primary mt-2">Vezi Playlist-uri</a>
+                    <a href="/Library/Index" class="btn btn-outline-primary mt-2">Vezi Playlist-uri</a>
                 </div>
             </div>
         </div>
